--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "firebase-admin": "^11.0.1",
     "nodemon": "^2.0.16"
   }
 }
